# controllers/users.js
@@ -1,12 +1,13 @@
-const uuidv4  = require ('uuid');
+const { v4: uuidv4 } = require('uuid');
 const Users = require('../models/users.js');
 const express = require('express');
 const router = express.Router();
+const mongoose = require('mongoose');
 
 
-router.get("/users", function(req, res){
+router.get("/users", async function(req, res){
     try {
-        const getU = Users.find();
+        const getU = await Users.find();
                 
         res.status(200).json(getU);
     } catch (error) {
@@ -14,14 +15,14 @@ router.get("/users", function(req, res){
     }
 });
 
-router.post("/users", function(req, res){
+router.post("/users", async function(req, res){
 
     const { firstName, lastName, password, age } = req.body;
 
     const newUser = new Users({ firstName, lastName, password, age, id: uuidv4()})
 
     try {
-         newUser.save();
+        await newUser.save();
 
         res.status(201).json(newUser);
     } catch (error) {
@@ -30,11 +31,11 @@ router.post("/users", function(req, res){
 
 });
 
-router.get("/users", function(req, res){
-    const { id } = req.params;
+router.get("/users/:id",async function(req, res){
+    const id  = req.params.id;
 
     try {
-        const u =  Users.findById(id);
+        const u = await Users.findById(id);
         
         res.status(200).json(u);
     } catch (error) {
@@ -42,25 +43,25 @@ router.get("/users", function(req, res){
     }
   });
 
-router.delete("/users", function(req, res){
-    const { id } = req.params;
+router.delete("/users/:id",async function(req, res){
+    const id  = req.params.id;
 
     if (!mongoose.Types.ObjectId.isValid(id)) return res.status(404).send(`No user with id: ${id}`);
 
-     Users.findByIdAndRemove(id);
+    await Users.findByIdAndRemove(id);
 
     res.json({ message: "User deleted successfully." });
 });
 
-router.put("/users", function(req, res){
-    const { id } = req.params;
+router.put("/users/:id",async function(req, res){
+    const id  = req.params.id;
     const { firstName, lastName, password, age } = req.body;
     
     if (!mongoose.Types.ObjectId.isValid(id)) return res.status(404).send(`No user with id: ${id}`);
 
     const updatedUser = { firstName, lastName, password, age , _id: id };
 
-    Users.findByIdAndUpdate(id, updatedUser, { new: true });
+    await Users.findByIdAndUpdate(id, updatedUser, { new: true });
 
     res.json(updatedUser)
 
